Hiding overflow on x axis and tried converting icon to png to fix bug where it doesn't show on all browsers.

--- a/WebContent/stylesheet.css
+++ b/WebContent/stylesheet.css
@@ -6,6 +6,7 @@
 html {
     background: #0c0c0c;
     overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 #top_bar {
